--- a/common_services/cone_presentation/pom.xml
+++ b/common_services/cone_presentation/pom.xml
@@ -2,14 +2,14 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.25-SNAPSHOT</version>
+		<version>1.0.25</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>cone_presentation</artifactId>
 	<packaging>war</packaging>
 	<name>cone_presentation</name>
-	<version>1.0.22-SNAPSHOT</version>
+	<version>1.0.22</version>
 	<build>
 		<plugins>
 			<plugin>
@@ -68,7 +68,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.23-SNAPSHOT</version>
+			<version>1.1.23</version>
 			<type>ejb</type>
 			<scope>provided</scope>
 		</dependency>
