--- a/common_services/dataacquisition/pom.xml
+++ b/common_services/dataacquisition/pom.xml
@@ -1,22 +1,20 @@
-<project 	xmlns="http://maven.apache.org/POM/4.0.0" 
- 			xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
- 			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.25-SNAPSHOT</version>
+		<version>1.0.25</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>dataacquisition</artifactId>
     <name>dataacquisition</name>
 	<packaging>ejb</packaging>
-	<version>1.0.20-SNAPSHOT</version>
+	<version>1.0.20</version>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/dataacquisition</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/dataacquisition</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.25/dataacquisition</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.25/dataacquisition</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.25</url>
 	</scm>
 
 	<build>
@@ -108,7 +106,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>transformation</artifactId>
-			<version>1.0.11-SNAPSHOT</version>
+			<version>1.0.11</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -150,7 +148,7 @@
 		<dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.26-SNAPSHOT</version>
+            <version>1.0.26</version>
             <scope>compile</scope>
         </dependency>
 	</dependencies>
