--- a/common_services/transformation/pom.xml
+++ b/common_services/transformation/pom.xml
@@ -2,17 +2,17 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.26-SNAPSHOT</version>
+		<version>1.0.26</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>transformation</artifactId>
 	<name>transformation</name>
-	<version>1.0.12-SNAPSHOT</version>
+	<version>1.0.12</version>
 	<scm>
-	  <connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/transformation</connection>
-    <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/transformation</developerConnection>
-    <url>https://zim02.gwdg.de/repos/common/transformation</url>
+	  <connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.26/transformation</connection>
+    <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.26/transformation</developerConnection>
+    <url>https://zim02.gwdg.de/repos/common/transformation/tags/common_services-1.0.26/transformation</url>
   </scm>
 	<build>
 		<plugins>
@@ -97,20 +97,20 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.24-SNAPSHOT</version>
+			<version>1.1.24</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.30-SNAPSHOT</version>
+			<version>1.0.30</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.27-SNAPSHOT</version>
+			<version>1.0.27</version>
 			<scope>compile</scope>
 		</dependency>
       	<dependency>
