--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -153,7 +153,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.27-SNAPSHOT</version>
+            <version>1.0.27</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
