--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -568,6 +568,9 @@
 				<xsd.soap.toc.table-of-content>http://www.escidoc.de/schemas/tableofcontent/0.1</xsd.soap.toc.table-of-content>
 				<xsd.soap.result.result>http://www.escidoc.de/schemas/result/0.1</xsd.soap.result.result>
 				
+				<escidoc.statistics.max_mind_geo_lite_city_db.location />
+                <escidoc.statistics.shortenedIps>true</escidoc.statistics.shortenedIps>
+				
 			</properties>
 			
 				<distributionManagement>
@@ -750,6 +753,9 @@
 				<xsd.soap.toc.toc>http://www.escidoc.de/schemas/toc/0.6</xsd.soap.toc.toc>
 				<xsd.soap.toc.table-of-content>http://www.escidoc.de/schemas/tableofcontent/0.1</xsd.soap.toc.table-of-content>
 				<xsd.soap.result.result>http://www.escidoc.de/schemas/result/0.1</xsd.soap.result.result>
+				
+				<escidoc.statistics.max_mind_geo_lite_city_db.location />
+                <escidoc.statistics.shortenedIps>true</escidoc.statistics.shortenedIps>
 				
 			</properties>
 				<distributionManagement>
