--- a/pubman/pubman_logic/pom.xml
+++ b/pubman/pubman_logic/pom.xml
@@ -83,7 +83,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>transformation</artifactId>
-			<version>1.0.12</version>
+			<version>1.0.13-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
