Faces file export fixed

--- a/common_services/exportmanager/src/test/resources/pubman.properties
+++ b/common_services/exportmanager/src/test/resources/pubman.properties
@@ -6,3 +6,9 @@ escidoc.framework_access.content-model.id.publication=${escidoc.framework_access
 
 framework.admin.username=${framework.admin.username}
 framework.admin.password=${framework.admin.password}
+
+# Component schema
+xsd.soap.item.components=${xsd.soap.item.components}
+
+# Metadata schema
+xsd.soap.common.mdrecords=${xsd.soap.common.mdrecords}
