switch over to new archiva server

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -192,13 +192,13 @@
 			<id>deployment.webdav</id>
 			<name>Archiva deployment</name>
 			<url>
-				dav:http://escidoc1.escidoc.mpg.de:8888/archiva/repository/internal/
+				dav:http://archiva.mpdl.mpg.de/archiva/repository/internal
 			</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots.webdav</id>
 			<url>
-				dav:http://escidoc1.escidoc.mpg.de:8888/archiva/repository/snapshots/
+				dav:http://archiva.mpdl.mpg.de/archiva/repository/snapshots
 			</url>
 		</snapshotRepository>
 		<site>
@@ -214,7 +214,7 @@
 			<id>deployment.webdav</id>
 			<name>Archiva Managed Internal Repository</name>
 			<url>
-				http://escidoc1.escidoc.mpg.de:8888/archiva/repository/internal
+				http://archiva.mpdl.mpg.de/archiva/repository/internal
 			</url>
 			<releases>
 				<enabled>true</enabled>
@@ -227,7 +227,7 @@
 			<id>snapshots.webdav</id>
 			<name>Archiva Managed Snapshot Repository</name>
 			<url>
-				http://escidoc1.escidoc.mpg.de:8888/archiva/repository/snapshots
+				http://archiva.mpdl.mpg.de/archiva/repository/snapshots
 			</url>
 			<releases>
 				<enabled>false</enabled>
@@ -241,9 +241,19 @@
 	<pluginRepositories>
 		<pluginRepository>
 			<id>Archiva plugin snapshots</id>
-			<url>http://escidoc1.escidoc.mpg.de:8888/archiva/repository/snapshots</url>
+			<url>http://archiva.mpdl.mpg.de/archiva/repository/snapshots</url>
 			<snapshots>
 				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</pluginRepository>
+                <pluginRepository>
+			<id>Archiva plugin internal</id>
+			<url>http://archiva.mpdl.mpg.de/archiva/repository/internal</url>
+			<snapshots>
+				<enabled>false</enabled>
 			</snapshots>
 			<releases>
 				<enabled>true</enabled>
@@ -577,11 +587,11 @@
 				<repository>
 					<id>deployment.webdav</id>
 					<name>Archiva deployment</name>
-					<url>dav:http://escidoc1.escidoc.mpg.de:8888/archiva/repository/internal/</url>
+					<url>dav:http://archiva.mpdl.mpg.de/archiva/repository/internal</url>
 				</repository>
 				<snapshotRepository>
 					<id>snapshots.webdav</id>
-					<url>dav:http://escidoc1.escidoc.mpg.de:8888/archiva/repository/snapshots/</url>
+					<url>dav:http://archiva.mpdl.mpg.de/archiva/repository/snapshots</url>
 				</snapshotRepository>
 				<site>
 					<id>website</id>
@@ -762,11 +772,11 @@
 				<repository>
 					<id>deployment.webdav</id>
 					<name>Archiva deployment</name>
-					<url>dav:http://escidoc1.escidoc.mpg.de:8888/archiva/repository/internal/</url>
+					<url>dav:http://archiva.mpdl.mpg.de/archiva/repository/internal</url>
 				</repository>
 				<snapshotRepository>
 					<id>snapshots.webdav</id>
-					<url>dav:http://escidoc1.escidoc.mpg.de:8888/archiva/repository/snapshots/</url>
+					<url>dav:http://archiva.mpdl.mpg.de/archiva/repository/snapshots</url>
 				</snapshotRepository>
 				<site>
 					<id>website</id>
