--- a/pubman/pubman_logic/pom.xml
+++ b/pubman/pubman_logic/pom.xml
@@ -95,7 +95,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>search</artifactId>
-			<version>1.0.24</version>
+			<version>1.0.26-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		  <dependency>
