--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -508,7 +508,7 @@
 				<escidoc.cone.mulgara.server.port>8888</escidoc.cone.mulgara.server.port>
 				<escidoc.cone.language.default>en</escidoc.cone.language.default>
 				<escidoc.cone.maximum.results>50</escidoc.cone.maximum.results>
-				<escidoc.cone.service.url>http://localhost:8080/cone/</escidoc.cone.service.url>
+				<escidoc.cone.service.url>http://pubman.mpdl.mpg.de/cone</escidoc.cone.service.url>
 				
 				<!-- Import database -->
 				<escidoc.import.database.driver.class>org.hsqldb.jdbcDriver</escidoc.import.database.driver.class>
@@ -688,7 +688,7 @@
 				<escidoc.cone.mulgara.server.port>8888</escidoc.cone.mulgara.server.port>
 				<escidoc.cone.language.default>en</escidoc.cone.language.default>
 				<escidoc.cone.maximum.results>50</escidoc.cone.maximum.results>
-				<escidoc.cone.service.url>http://dev-pubman.mpdl.mpg.de/cone/</escidoc.cone.service.url>
+				<escidoc.cone.service.url>http://pubman.mpdl.mpg.de/cone/</escidoc.cone.service.url>
 				
 				<!-- Import database -->
 				<escidoc.import.database.driver.class>org.hsqldb.jdbcDriver</escidoc.import.database.driver.class>
