--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -492,7 +492,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>dataacquisition_presentation</artifactId>
-            <version>1.0.21</version>
+            <version>1.0.23-SNAPSHOT</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
