--- a/common_services/transformation/pom.xml
+++ b/common_services/transformation/pom.xml
@@ -1,21 +1,19 @@
-<project 	xmlns="http://maven.apache.org/POM/4.0.0" 
-			xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 			
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.28-SNAPSHOT</version>
+		<version>1.0.28</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>transformation</artifactId>
 	<name>transformation</name>
-	<version>1.0.14-SNAPSHOT</version>
+	<version>1.0.14</version>
 	<scm>
-	  <connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/transformation</connection>
-    <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/transformation</developerConnection>
-    <url>https://zim02.gwdg.de/repos/common/transformation</url>
+	  <connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.28/transformation</connection>
+    <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.28/transformation</developerConnection>
+    <url>https://zim02.gwdg.de/repos/common/transformation/tags/common_services-1.0.28/transformation</url>
   </scm>
 	<build>
 		<plugins>
@@ -87,20 +85,20 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.26-SNAPSHOT</version>
+			<version>1.1.26</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.32-SNAPSHOT</version>
+			<version>1.0.32</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.29-SNAPSHOT</version>
+			<version>1.0.29</version>
 			<scope>compile</scope>
 		</dependency>
       	<dependency>
