--- a/common_services/search/pom.xml
+++ b/common_services/search/pom.xml
@@ -2,19 +2,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.28</version>
+		<version>1.0.29-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>search</artifactId>
 	<name>search</name>
 	<packaging>ejb</packaging>
-	<version>1.0.26</version>
+	<version>1.0.27-SNAPSHOT</version>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.28/search</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.28/search</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.28</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/search</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/search</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/</url>
 	</scm>
 
 	<build>
@@ -70,19 +70,19 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.26</version>
+			<version>1.1.27-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.32</version>
+			<version>1.0.33-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.29</version>
+			<version>1.0.30-SNAPSHOT</version>
 			<scope>compile</scope>
 	</dependency>
 		<dependency>
