--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -80,6 +80,9 @@ framework.admin.password=${framework.admin.password}
 # eSciDoc-ObjId of the external Organisation
 escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.id}
 
+# eSciDoc-ObjId of the root of the OU tree (used for edoc import)
+escidoc.pubman.root.organisation.id=${escidoc.pubman.root.organisation.id}
+
 # COntrolled Named Entities database interface class
 escidoc.cone.querier.class=${escidoc.cone.querier.class}
 
