--- a/common_services/transformation/src/test/resources/pubman.properties
+++ b/common_services/transformation/src/test/resources/pubman.properties
@@ -2,3 +2,6 @@
 escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.id}
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
 escidoc.framework_access.framework.url=${escidoc.common.framework.url}
+
+# eSciDoc-ObjId of the root of the OU tree (used for edoc import)
+escidoc.pubman.root.organisation.id=${escidoc.pubman.root.organisation.id}
