--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -48,6 +48,22 @@ escidoc.pubman.component.pattern=${escidoc.pubman.component.pattern}
 escidoc.pubman.policy.url=${escidoc.pubman.policy.url}
 escidoc.pubman.contact.url=${escidoc.pubman.contact.url}
 
+<!-- Properties for PubMan standard theme-->
+escidoc.pubman.stylesheet.standard.url=${escidoc.pubman.stylesheet.standard.url}
+escidoc.pubman.stylesheet.standard.type=${escidoc.pubman.stylesheet.standard.type}
+
+<!-- Properties for PubMan contrast theme-->
+escidoc.pubman.stylesheet.contrast.url=${escidoc.pubman.stylesheet.contrast.url}
+escidoc.pubman.stylesheet.contrast.type=${escidoc.pubman.stylesheet.contrast.type}
+
+<!-- Properties for PubMan classic theme-->
+escidoc.pubman.stylesheet.clasic.url=${escidoc.pubman.stylesheet.clasic.url}
+escidoc.pubman.stylesheet.classic.type=${escidoc.pubman.stylesheet.classic.type}
+
+<!-- URL of the favicon-->
+escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
+
+
 # URL of the FIZ framework instance
 escidoc.framework_access.framework.url=${escidoc.common.framework.url}
 
