--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -51,14 +51,17 @@ escidoc.pubman.contact.url=${escidoc.pubman.contact.url}
 <!-- Properties for PubMan standard theme-->
 escidoc.pubman.stylesheet.standard.url=${escidoc.pubman.stylesheet.standard.url}
 escidoc.pubman.stylesheet.standard.type=${escidoc.pubman.stylesheet.standard.type}
+escidoc.pubman.stylesheet.standard.apply=${escidoc.pubman.stylesheet.standard.apply}
 
 <!-- Properties for PubMan contrast theme-->
 escidoc.pubman.stylesheet.contrast.url=${escidoc.pubman.stylesheet.contrast.url}
 escidoc.pubman.stylesheet.contrast.type=${escidoc.pubman.stylesheet.contrast.type}
+escidoc.pubman.stylesheet.contrast.apply=${escidoc.pubman.stylesheet.contrast.apply}
 
 <!-- Properties for PubMan classic theme-->
 escidoc.pubman.stylesheet.clasic.url=${escidoc.pubman.stylesheet.clasic.url}
 escidoc.pubman.stylesheet.classic.type=${escidoc.pubman.stylesheet.classic.type}
+escidoc.pubman.stylesheet.classic.apply=${escidoc.pubman.stylesheet.classic.apply}
 
 <!-- URL of the favicon-->
 escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
