--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -490,14 +490,17 @@
 				<!-- Properties for PubMan standard theme-->
 				<escidoc.pubman.stylesheet.standard.url>./resources/eSciDoc_CSS_v2/themes/skin_PubMan/styles/theme.css</escidoc.pubman.stylesheet.standard.url>
 				<escidoc.pubman.stylesheet.standard.type>stylesheet</escidoc.pubman.stylesheet.standard.type>
+				<escidoc.pubman.stylesheet.standard.apply>true</escidoc.pubman.stylesheet.standard.apply>
 				
 				<!-- Properties for PubMan contrast theme-->
 				<escidoc.pubman.stylesheet.contrast.url>./resources/eSciDoc_CSS_v2/themes/skin_highContrast/styles/theme.css</escidoc.pubman.stylesheet.contrast.url>
 				<escidoc.pubman.stylesheet.contrast.type>alternate stylesheet</escidoc.pubman.stylesheet.contrast.type>
+				<escidoc.pubman.stylesheet.contrast.apply>true</escidoc.pubman.stylesheet.contrast.apply>
 				
 				<!-- Properties for PubMan classic theme-->
 				<escidoc.pubman.stylesheet.clasic.url>./resources/eSciDoc_CSS_v2/themes/skin_classic/styles/theme.css</escidoc.pubman.stylesheet.clasic.url>
 				<escidoc.pubman.stylesheet.classic.type>alternate stylesheet</escidoc.pubman.stylesheet.classic.type>
+				<escidoc.pubman.stylesheet.classic.apply>true</escidoc.pubman.stylesheet.classic.apply>
 				
 				<!-- URL of the favicon-->
 				<escidoc.pubman.favicon.url>./resources/pubman_favicon.ico</escidoc.pubman.favicon.url>
