--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -59,7 +59,7 @@ escidoc.pubman.stylesheet.contrast.type=${escidoc.pubman.stylesheet.contrast.typ
 escidoc.pubman.stylesheet.contrast.apply=${escidoc.pubman.stylesheet.contrast.apply}
 
 <!-- Properties for PubMan classic theme-->
-escidoc.pubman.stylesheet.clasic.url=${escidoc.pubman.stylesheet.clasic.url}
+escidoc.pubman.stylesheet.classic.url=${escidoc.pubman.stylesheet.classic.url}
 escidoc.pubman.stylesheet.classic.type=${escidoc.pubman.stylesheet.classic.type}
 escidoc.pubman.stylesheet.classic.apply=${escidoc.pubman.stylesheet.classic.apply}
 
