--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -65,6 +65,7 @@ escidoc.pubman.stylesheet.classic.apply=${escidoc.pubman.stylesheet.classic.appl
 
 <!-- URL of the favicon-->
 escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
+escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
 
 
 # URL of the FIZ framework instance
