--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -177,3 +177,18 @@ escidoc.statistics.max_mind_geo_lite_city_db.location=${escidoc.statistics.max_m
 
 #true if Ips should be stored in a truncated version (last three digits are removed) for the statistics, false if full IPs should be stored
 escidoc.statistics.shortenedIps=${escidoc.statistics.shortenedIps}
+
+escidoc.pubman.stylesheet.standard.apply=${escidoc.pubman.stylesheet.standard.apply}
+escidoc.pubman.stylesheet.standard.type=${escidoc.pubman.stylesheet.standard.type}
+escidoc.pubman.stylesheet.standard.url=${escidoc.pubman.stylesheet.standard.url}
+
+escidoc.pubman.stylesheet.contrast.apply=${escidoc.pubman.stylesheet.contrast.apply}
+escidoc.pubman.stylesheet.contrast.type=${escidoc.pubman.stylesheet.contrast.type}
+escidoc.pubman.stylesheet.contrast.url=${escidoc.pubman.stylesheet.contrast.url}
+
+escidoc.pubman.stylesheet.classic.apply=${escidoc.pubman.stylesheet.classic.apply}
+escidoc.pubman.stylesheet.classic.type=${escidoc.pubman.stylesheet.classic.type}
+escidoc.pubman.stylesheet.classic.url=${escidoc.pubman.stylesheet.classic.url}
+
+escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
+escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
