--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -68,6 +68,10 @@ escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
 escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
 
 
+<!-- version of the pubman cookie (has to be changed if style information is changed)-->
+escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
+
+
 # URL of the FIZ framework instance
 escidoc.framework_access.framework.url=${escidoc.common.framework.url}
 
@@ -192,3 +196,6 @@ escidoc.pubman.stylesheet.classic.url=${escidoc.pubman.stylesheet.classic.url}
 
 escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
 escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
+
+<!-- version of the pubman cookie (has to be changed if style information is changed)-->
+escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
